--- a/04-Selectores/Index.html
+++ b/04-Selectores/Index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Selectores</title>
+  <title>Selectores 📚</title>
 
-  <!-- link:css ->Emmet Abrevation -->
+  <!-- link:css -> Emmet Abrevation -->
 
   <link rel="stylesheet" href="./Styles.css">
 </head>
@@ -17,7 +17,46 @@
   
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt nobis illo expedita corrupti amet vel consectetur cum itaque vero tempore molestiae non, voluptatibus totam sint nostrum quasi perferendis inventore?</p>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, ipsum facilis! Tempora, necessitatibus. Nisi facere libero eligendi recusandae voluptatibus minima maxime ullam pariatur ea, obcaecati, repellat cum dolores tempora labore?</p>
+
   </header>
+
+  <!-- 22/11/2024 -->
+
+  <main class="content">
+
+    <section class="hero">
+
+      <h2 class="hero-title">Tu mamá no me quiere! 😢</h2>
+
+    </section>
+
+    <section>
+
+      <h2 id="about-title">Dice que soy un vago!</h2>
+
+    </section>
+
+    <section>
+
+      <h2 class="hero-title">Dice que soy un pelado!</h2>
+
+    </section>
+
+  </main>
+
+  <aside>
+
+    <section class="asside-section">
+      <h3>Sección 1 Aside</h3>
+    </section>
+
+    <section class="asside-section">
+      <h3>Sección 2 Aside</h3>
+    </section>
+
+  </aside>
+  
 
   
 </body>
