Vimos selectores combinados de atributo y avanzamos.

--- a/04-Selectores/Index.html
+++ b/04-Selectores/Index.html
@@ -55,9 +55,31 @@
       <h3>Sección 2 Aside</h3>
     </section>
 
-  </aside>
-  
+    <section>
+      <h3>Series Favoritas</h3>
+      <ul class="lista">
+        <li>Arcane</li>
+        <li class="bro">Cyberpunk: Edge Runners</li>
+        <li class="tercero">Hunter x Hunter</li>
+        <li>Jojo's Bizzare Adventure</li>
+        <li>Adventure Time</li>
+      </ul>
+    </section>
 
-  
+  </aside>
+
+  <footer>
+
+    <div>
+
+      <a href="">Google</a>
+      <a href="https://www.instagram.com">Instagram</a>
+      <a href="">Roblox</a>
+
+    </div>
+
+  </footer>
+
+
 </body>
 </html>
